# crim-tauri

./: .eslintrc.json  .gitignore  README.md  index.html  messenger.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.js.timestamp-1724684121757-bc0aaf866e155.mjs
src/: App.css  App.jsx  MessengerApp.jsx  messenger.jsx  styles.css
src-tauri/: .gitignore  .pkey.key  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/generics/: enums.rs  mod.rs  structs.rs  utils.rs
src-tauri/src/messaging/: mod.rs  receive.rs  recieve.rs  send.rs
src-tauri/src/structs/: structs.rs
src-tauri/src/user/: get.rs  login.rs  logout.rs  mod.rs  register.rs  update.rs  update_friend.rs
src-tauri/src/user/friends/: accept_friend_request.rs  add_friend.rs  decline_friend_request.rs  mod.rs  new_conversation.rs  remove_friend.rs
src-tauri/src/websockets/: mod.rs  parse_arbitrary.rs
src/components/: Conversation.jsx  ConversationButtonSidebar.jsx  Friend.jsx  FriendConvoCheck.jsx  FriendMgmt.jsx  FriendRequest.jsx  Message.jsx  Modal.jsx  NavBar.jsx  modal.css
src/modules/: parse_error.js
