[package]
name = "crim"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.11.26"
tokio = { version = "1.36.0", features = ["full"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio-tungstenite = {version = "0.21.0", features = ["native-tls"] }
futures = "0.3.30"
rsa = { version = "0.9.6", features = ["pem"] }
tungstenite = "0.21.0"
aes-gcm = "0.10.3"
once_cell = "1.19.0"
rust-argon2 = "2.1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
